--- a/index.html
+++ b/index.html
@@ -61,17 +61,17 @@
     <p>И тип в легендах Майя упоминается что из деревьев падала листва, умирал скот и умирали собаки и большинство индейцев тоже, а те кто остался - покинули земли.</p>
     <p>Из предположений есть теория что в результате взрывов что вода в мировом океане начала двигаться и сделала что-то по типу водоворота который сделал вращение земли быстрее, и из 36 часов, сутки меняться начали за 24.</p>
     <p>+ Наш каленарь ошибается на сутки каждые 5к лет, каленарь Майя ошибается только раз в 8к лет + как говорили о апокалипсисе в 2012, но не суть.</p>
-    <p>Они предупреждали что точность их календаря состоявляет 8к лет.</p>
+    <p>Они предупреждали что точность их календаря состаявляет 8к лет.</p>
     <p></p>
     <p>Множество мифов и эпосов описывали одними событиями, но разными словами, получается катастрофа глобальная и происходила в разных частях земли, и чисто логически получается что мифы и выдумки из древности это не выдумки, а описание реальных фактов.</p>
     <p>К тому же везде по разному это воспринимали и описывали что было вокруг, так что виманы, божественные колесницы и ковры самолеты могут являться одним и тем же.</p>
     <p></p>
-    <p>В древних текстах разных народов есть тенденция использовать один и тот же сюжет, которые создавали людей по своему образу и подобию и жили среди них</p>
-    <p>И скорее всего обучали земледелию, языкам, наукам, поэтому в этих текстах могут быть интересные неисвестные знания</p>
-    <p>По крайней мере в множестве из них описывали богов, из интересного это шумерская глина и фигурки на которых описывались события, делали так же описания события и являния.</p>
+    <p>В древних текстах разных народов есть тенденция использовать один и тот же сюжет, о богах которые создавали людей по своему образу и подобию и жили среди них</p>
+    <p>И скорее всего обучали земледелию, языкам, наукам, поэтому в этих текстах могут быть интересные неизвестные знания</p>
+    <p>По крайней мере в множестве из них описывали богов, из интересного это шумерская глина и фигурки на которых описывались события, делали так же описания событий и являний.</p>
     <p>А глина в тот момент была одним из таких доступных материалом на котором можно было рисовать той же палочкой, она засыхала и оставались рисунки.</p>
     <p>Но сам факт этого всего что эта цивилизация появляется из ниоткуда и представляет из себя массу направлений развития</p>
-    <p>Из самого интересного что там упоминалось - это то что человек выведен путем генной инженерии и создали людей пришельцы с планеты Нибиру</p>
+    <p>Из самого интересного что там упоминалось - это то что человек выведен путем генной инженерии и создали людей пришельцы с планеты Нибиру хапхахп</p>
     <p>Ниби́ру, Неберу — космогоническое понятие шумеро-аккадской мифологии. Упоминается в «Энума элиш» и ассоциируется с богом Мардуком.</p>
     <p></p>
     <a href="https://ru.wikipedia.org/wiki/%D0%9D%D0%B8%D0%B1%D0%B8%D1%80%D1%83">Нибиру</a>
@@ -82,7 +82,7 @@
     <p>И тип теоритически люди могли существовать в какой-то неразумной форме и брали генны и создавали существо уже ближе к современному человеку, в разных точках земли опять же разные боги</p>
     <p>Ну и из интересного организм использует 5% днк, остальные 95 мусор с непонятными функциями и человек никогда не сможет задействовать эту часть, ну и это до сих пор не разгадано</p>
     <p>И одна из теорий что наш генетический код был написан программистом тоже вероятно правда, только не земным, и возможно неизвестная днк которую не использует человек - это та часть, которая открывает возможности для мозга в плане вычисленний и т.д.</p>
-    <p>Ну и из моего любимого это что так скажем боги обучали людей первое время и помогали им, тот же к примеру бог Кетцалькоатль, который научил выращивать людей не только ту же кукурузу, которую к факту нельзя найти в диком мире, только вырастить путем тысячи лет селективного разведения, и тогда тейосинте (растение что встречается в дикой природе) могло бы стать современной кукурузой</p>
+    <p>Ну и из моего любимого это что так скажем боги обучали людей первое время и помогали им, тот же к примеру бог Кетцалькоатль, который научил выращивать людей не только ту же кукурузу, которую к факту нельзя найти в диком мире, только вырастить путем тысячи лет селективного разведения тейосинте (растение что встречается в дикой природе) и тогда могло бы стать современной кукурузой</p>
     <p>+ Есть упомининия что этот же бог учил людей исскуству, грамоте и языку, то есть: по описанию китайских, шумерских и индийских боги научили людей земледелию.</p>
     <p>Как это все выращивать, и из интересного из шумерских табличек можно выделить что первых 10 царей сохранили на табличках, с датами, которые имели продолжительсность жизни в десятках тысяч лет.</p>
     <p>тип получается исследовали землю, изучали все буквально и покинули планету.</p>
@@ -143,7 +143,7 @@
     <a href="https://ru.wikipedia.org/wiki/%D0%9E%D0%BD%D0%B5%D0%B6%D1%81%D0%BA%D0%BE%D0%B5_%D0%BE%D0%B7%D0%B5%D1%80%D0%BE">Озеро</a>
     <a href="https://extinct-animals.fandom.com/ru/wiki/%D0%A1%D1%82%D0%B5%D0%BD%D0%BE%D0%BD%D0%B8%D1%85%D0%BE%D0%B7%D0%B0%D0%B2%D1%80">Стенонихозавр</a>
     <a href="https://ru.wikipedia.org/wiki/%D0%9A%D0%B5%D1%82%D1%86%D0%B0%D0%BB%D1%8C%D0%BA%D0%BE%D0%B0%D1%82%D0%BB%D1%8C">Кетцалькоатль</a>
-    <p></p>
+    <p>И то это не все оказывается есть какой-то определнный круг лиц который хранит множество этих знаний</p>
 </div>
 </body>
 </html>
