--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <p>Нашли в одном из храме Индии, по сути это оказался манускрипт по сборке летательных аппаратов, причем не в общих чертах, а в целом подробно включая строение двигателя и вида топлива</p>
     <p>Включая способы взлета, приземления, ну и как оказалось это заинтересовало авиационных инженеров и обнаружили что описываются характеристики высокотехнологичных летательных аппаратов</p>
     <p>Там так же описываются множество аспектов включая управление, и то что они преодолевали огромные расстояния со скоростью мысли и так же оставили секреты для пилота + диету и технику безопасности</p>
-    <p>+ В книгах описано что эти летательные аппараты давали отражение, ну и из предположений это как в наше время самолет, который сверкает/бликует.</p>
+    <p>+ В книгах описано (предками) что эти летательные аппараты давали отражение, ну и из предположений это как в наше время самолет, который сверкает/бликует.</p>
     <p>Упоминания кстати как оказалось соддержится во многих текстах древней Индии и в ведах.</p>
     <p>В около 150 индийских рукописей упоминалась одна и та же вимана, она была треугольной формы и состояла из 3 этажей, два крыла, 3 колеса, КОТОРЫЕ ВТЯГИВАЮТСЯ ВО ВРЕМЯ ПОЛЕТА.</p>
     <p>В Вашингтоне в 2012 году NASA представляет модель самолета X-48c который якобы самолет будущего, полноценная его модель будет в 2025 году, но 5к лет назад его описывали примерно так же...</p>
@@ -144,6 +144,7 @@
     <a href="https://extinct-animals.fandom.com/ru/wiki/%D0%A1%D1%82%D0%B5%D0%BD%D0%BE%D0%BD%D0%B8%D1%85%D0%BE%D0%B7%D0%B0%D0%B2%D1%80">Стенонихозавр</a>
     <a href="https://ru.wikipedia.org/wiki/%D0%9A%D0%B5%D1%82%D1%86%D0%B0%D0%BB%D1%8C%D0%BA%D0%BE%D0%B0%D1%82%D0%BB%D1%8C">Кетцалькоатль</a>
     <p>И то это не все оказывается есть какой-то определнный круг лиц который хранит множество этих знаний</p>
+    <p>Безумие в общем</p>
 </div>
 </body>
 </html>
