--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <p>Еще есть такой город под названием Кутна-Гора, там есть храм который внутри сделан из человеческих костей и даже люстра и это все сделано с помощью костей 5000 человек.</p>
     <p>И для строительства использовали кости которые погибли от бубонной чумы, которые погибли, в 1318 году, причем болезнь появилась внезапно и никак не затронула жителей соседней деревень.</p>
     <p>Вот что такое кодекс Гигас, его называют библией дьявола, но тип звучит таинственно и заманчиво, но если перевести ее - то просто книга, ничего интересного.</p>
-    <p>По ее легенде монах совершивший страшный грех приказал замуровать себя заживо в комнате и чтобы искупить вину дал обет который будет соддержать все знания человечества.</p>
+    <p>По ее легенде монах совершивший страшный грех приказал замуровать себя заживо в комнате и чтобы искупить вину дал обет? что напишет книгу которая будет соддержать все знания человечества.</p>
     <p>Ну и он короче обратился к дьяволу и в итоге обменял душу и написал книгу за ночь, как? Хз</p>
     <p>Но помню это еще в шкиле рассказывали</p>
     <p>И писал эту книгу один человек, одними и теми же чернилами и на создание такого объема рукописного текста с иллюстрациями, ему бы потребовалось не меньше 30 лет</p>
